# MemoryAnalysisToolkit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ignore
benchmarks/: ScanBenchmarks.cpp
cmake/: memscan-config.cmake.in  memscan.pc.in
examples/: memory_layout_analyzer.cpp  scan_library.cpp  scan_own_process.cpp
include/memscan/: MemoryRegion.hpp  PatternScanner.hpp  Platform.hpp  Process.hpp  memscan.hpp
src/: MemoryRegion.cpp  PatternScanner.cpp  Process.cpp
tests/: TestMain.cpp  TestMemoryRegion.cpp  TestPatternScanner.cpp  TestProcess.cpp
